syntax = "proto3";
package soarchain.poa;

option go_package = "soarchain/x/poa/types";

message MasterKey {
  string masterCertificate = 1; 
  string masterAccount = 2; 
  
}
